<resources>
    <string name="app_name">TO-DO Application</string>

    <string name="roll_the_dice">Roll The Dice</string>
    <string name="roll">Roll</string>
    <string name="logo">Logo</string>
    <string name="eg_email">sandytechofficial@gmail.com</string>
    <string name="eg_password">********</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="image_swap">Image Swap</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="to_do_text">To Do Text</string>
</resources>